template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Infraestructura Distribuida Finsy - Jenkins, App y Database'

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id'
  
  KeyName:
    Description: Nombre de la llave SSH
    Type: AWS::EC2::KeyPair::KeyName
    Default: vockey

Resources:
  # 1. Bucket S3
  FinsyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub finsy-infra-deploy-${AWS::AccountId}

  # 2. Security Group (Base)
  FinsySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Reglas de red para Finsy
      SecurityGroupIngress:
        - IpProtocol: tcp # Acceso SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Interfaz Jenkins
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Acceso Frontend
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # Acceso Backend API
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0

  # 3. Comunicación Interna para MySQL (3306)
  MySQLInternalRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref FinsySecurityGroup
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref FinsySecurityGroup

  # 4. Instancias EC2
  JenkinsInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t3.small
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      SecurityGroupIds: [!Ref FinsySecurityGroup]
      Tags:
        - Key: Name
          Value: Finsy-Jenkins-Build

  AppInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      SecurityGroupIds: [!Ref FinsySecurityGroup]
      Tags:
        - Key: Name
          Value: Finsy-App-Server

  DBInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      IamInstanceProfile: LabInstanceProfile
      SecurityGroupIds: [!Ref FinsySecurityGroup]
      Tags:
        - Key: Name
          Value: Finsy-DB-Server
